--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-SWELL_STORE_ID=nextjs
-SWELL_PUBLIC_KEY=pk_8AYtU5rogGYA9ThykEjeePxQQfXsDwd3
-SWELL_STORE_URL=https://nextjs.swell.store/
+SWELL_STORE_ID=behnod
+SWELL_PUBLIC_KEY=pk_MVH3xzcdim4GdB5UbtxCqjS6uSlArFyB
+SWELL_STORE_URL=https://behnod.swell.store/
